--- a/components/box-module/main/build.gradle
+++ b/components/box-module/main/build.gradle
@@ -1,24 +1,17 @@
 apply from: "$rootDir.path/script/app_module.gradle"
+
 android {
     defaultConfig {
         vectorDrawables {
             useSupportLibrary true
         }
-        buildConfigField('String', 'IMAGE_BASE_URL', '"http://10.32.151.130:9000"')
+        buildConfigField('String', 'IMAGE_BASE_URL', '"http://192.168.5.103:9000"')
     }
-
-//    kotlinOptions {
-//        jvmTarget = '1.8'
-//        useIR = true
-//    }
     //想要使用dataBinding一定要在app主模块配置，其他lib模块配置不好使
     buildFeatures {
         dataBinding true
+        compose true
     }
-//    composeOptions {
-//        kotlinCompilerExtensionVersion compose_version
-//        kotlinCompilerVersion '1.4.32'
-//    }
     defaultConfig {
         resValue "string", "app_name","box.app"
     }
