--- a/components/box-module/tool/build.gradle
+++ b/components/box-module/tool/build.gradle
@@ -1,7 +1,11 @@
 //apply plugin: 'bundle-module'
 apply from: "$rootDir.path/script/bundle_module.gradle"
-
+apply from: "${rootDir.path}/script/ui_compose.gradle"
+apply from: "${rootDir.path}/script/ui_tradition.gradle"
 android {
+    buildFeatures{
+        compose true
+    }
 }
 
 dependencies {
