--- a/components/box-module/main/src/main/AndroidManifest.xml
+++ b/components/box-module/main/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <service android:name=".MyIntentService"/>
+        <activity android:name=".TestActivity"/>
     </application>
 
 </manifest>
