--- a/framework/loader/src/main/AndroidManifest.xml
+++ b/framework/loader/src/main/AndroidManifest.xml
@@ -34,9 +34,11 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="false" />
-    <uses-feature android:name="android.hardware.camera.autofocus"
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
         android:required="false" />
     <uses-feature
         android:name="android.hardware.microphone"
@@ -56,16 +58,16 @@
 
     <!--        android:allowBackup="${allowBackup}"-->
     <application
-        android:allowBackup="true"
         android:name="com.jamesfchen.loader.App"
+        android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
-        android:largeHeap="true"
-        android:hardwareAccelerated="true"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -108,9 +110,8 @@
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
             android:exported="false"
-            tools:node="merge"
-            >
-<!--            tools:node="remove"-->
+            tools:node="merge">
+            <!--            tools:node="remove"-->
             <meta-data
                 android:name="com.jamesfchen.loader.ApmInitializer"
                 android:value="androidx.startup" />
@@ -134,6 +135,26 @@
                 android:name="com.jamesfchen.loader.EmojiInitializer"
                 android:value="androidx.startup" />
         </provider>
-
+        <provider
+            android:name="com.squareup.picasso.PicassoProvider"
+            android:authorities="${applicationId}.com.squareup.picasso"
+            android:exported="false"
+            android:multiprocess="true" />
+        <provider
+            android:name="com.squareup.leakcanary.internal.LeakCanaryFileProvider"
+            android:authorities="com.squareup.leakcanary.fileprovider.${applicationId}"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            android:multiprocess="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/leak_canary_file_paths" />
+        </provider>
+        <provider
+            android:name="com.google.firebase.perf.provider.FirebasePerfProvider"
+            android:authorities="${applicationId}.firebaseperfprovider"
+            android:exported="false"
+            android:initOrder="101"
+            android:multiprocess="true" />
     </application>
 </manifest>
