--- a/components/hotel-module/bundle1/build.gradle
+++ b/components/hotel-module/bundle1/build.gradle
@@ -1,11 +1,13 @@
 //apply plugin: 'bundle-module'
 apply from: "$rootDir.path/script/bundle_module.gradle"
-
+apply from: "${rootDir.path}/script/ui_compose.gradle"
 android {
     defaultConfig {
 
     }
-
+    buildFeatures{
+        compose true
+    }
     buildTypes {
         inhouse {
             initWith debug
