--- a/android/.gitlab-ci-android.yml
+++ b/android/.gitlab-ci-android.yml
@@ -19,14 +19,14 @@ before_script:
   - echo y | android-sdk-linux/tools/bin/sdkmanager "platform-tools"  "platforms;android-${ANDROID_COMPILE_SDK}" --sdk_root=${ANDROID_HOME} >/dev/null
   - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" --sdk_root=${ANDROID_HOME} >/dev/null
   #  - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
-  - chmod +x ./android/gradlew
+  - chmod +x ./gradlew
   # temporarily disable checking for EPIPE error and use yes to accept all licenses
   - set +o pipefail
   - yes | android-sdk-linux/tools/bin/sdkmanager --licenses --sdk_root=${ANDROID_HOME} >/dev/null
   - set -o pipefail
   #  - apt-get install lib32ncurses5
   #  - apt install zlib1g-dev libncurses5-dev lib32z1 lib32ncurses6 -y
-  - ./android/gradlew includeAll
+  - ./gradlew includeAll
 stages:
   - build
   - test
