--- a/android/.gitlab-ci-hotel.yml
+++ b/android/.gitlab-ci-hotel.yml
@@ -5,35 +5,35 @@ hotel-foundation-build:
       - components/hotel-module/foundation/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:foundation:assemble publishToMavenLocal includeBinaryModule  -PmoduleName=hotel-foundation
+    - ./gradlew :components:hotel-module:foundation:assemble publishToMavenLocal includeBinaryModule  -PmoduleName=hotel-foundation
 hotel-foundation-lint:
   only:
     changes:
       - components/hotel-module/foundation/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:foundation:lintInhouse
+    - ./gradlew :components:hotel-module:foundation:lintInhouse
 #hotel-foundation-test:
 #  only:
 #    changes:
 #      - components/hotel-module/bundle1/**/*
 #  stage: test
 #  script:
-#    - ./android/gradlew :components:hotel-module:foundation:test
+#    - ./gradlew :components:hotel-module:foundation:test
 hotel-foundation-deploy1:
   only:
     changes:
       - components/hotel-module/foundation/**/*
   stage: deploy
   script:
-    - ./android/gradlew :components:hotel-module:foundation:publishToMavenLocal #发布到远程仓库
+    - ./gradlew :components:hotel-module:foundation:publishToMavenLocal #发布到远程仓库
 hotel-foundation-deploy2:
   only:
     changes:
       - components/hotel-module/foundation/**/*
   stage: deploy
   script:
-    - ./android/gradlew :components:hotel-module:bundle1:assemble publishToMavenLocal #发布到远程仓库
+    - ./gradlew :components:hotel-module:bundle1:assemble publishToMavenLocal #发布到远程仓库
 
 hotel-foundation-deploy3:
   only:
@@ -41,7 +41,7 @@ hotel-foundation-deploy3:
       - components/hotel-module/foundation/**/*
   stage: deploy
   script:
-    - ./android/gradlew :components:hotel-module:bundle2:assemble publishToMavenLocal #发布到远程仓库
+    - ./gradlew :components:hotel-module:bundle2:assemble publishToMavenLocal #发布到远程仓库
 # ========================
 hotel-bundle1-build:
   only:
@@ -49,7 +49,7 @@ hotel-bundle1-build:
       - components/hotel-module/bundle1/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:bundle1:assemble
+    - ./gradlew :components:hotel-module:bundle1:assemble
 
 hotel-bundle1-lint:
   only:
@@ -57,7 +57,7 @@ hotel-bundle1-lint:
       - components/hotel-module/bundle1/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:bundle1:lintInhouse
+    - ./gradlew :components:hotel-module:bundle1:lintInhouse
 
 hotel-bundle1-deploy:
   only:
@@ -65,7 +65,7 @@ hotel-bundle1-deploy:
       - components/hotel-module/bundle1/**/*
   stage: deploy
   script:
-    - ./android/gradlew :components:hotel-module:bundle1:publishToMavenLocal #发布到远程仓库
+    - ./gradlew :components:hotel-module:bundle1:publishToMavenLocal #发布到远程仓库
 # ========================
 hotel-bundle2-build:
   only:
@@ -73,7 +73,7 @@ hotel-bundle2-build:
       - components/hotel-module/bundle2/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:bundle2:assemble
+    - ./gradlew :components:hotel-module:bundle2:assemble
 
 hotel-bundle2-lint:
   only:
@@ -81,7 +81,7 @@ hotel-bundle2-lint:
       - components/hotel-module/bundle2/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:bundle2:lintInhouse
+    - ./gradlew :components:hotel-module:bundle2:lintInhouse
 
 hotel-bundle2-deploy:
   only:
@@ -89,7 +89,7 @@ hotel-bundle2-deploy:
       - components/hotel-module/bundle2/**/*
   stage: deploy
   script:
-    - ./android/gradlew :components:hotel-module:bundle2:publishToMavenLocal
+    - ./gradlew :components:hotel-module:bundle2:publishToMavenLocal
 # ========================
 
 hotel-daily-check1:
@@ -98,26 +98,26 @@ hotel-daily-check1:
       - components/hotel-module/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:main:fileCounter
+    - ./gradlew :components:hotel-module:main:fileCounter
 hotel-daily-check2:
   only:
     changes:
       - components/hotel-module/**/*
   stage: build
   script:
-    - ./android/gradlew :components:hotel-module:main:dangerousApiTask
+    - ./gradlew :components:hotel-module:main:dangerousApiTask
 #lint job
 #hotelLint:
 #  only:
 #    - hotel
 #  stage: build
 #  script:
-#    - ./android/gradlew -Pci --console=plain -PbuildDir=lint :components:hotel-module:main:lintDebug
+#    - ./gradlew -Pci --console=plain -PbuildDir=lint :components:hotel-module:main:lintDebug
 
 #debugTests:
 #  stage: test
 #  script:
-#    - ./android/gradlew -Pci --console=plain :app:testDebug
+#    - ./gradlew -Pci --console=plain :app:testDebug
 
 
 
