--- a/android/.gitlab-ci-android.yml
+++ b/android/.gitlab-ci-android.yml
@@ -26,7 +26,11 @@ before_script:
   - set -o pipefail
   #  - apt-get install lib32ncurses5
   #  - apt install zlib1g-dev libncurses5-dev lib32z1 lib32ncurses6 -y
+  - cd android
   - ./gradlew includeAll
+after_script:
+  - echo "root after script"
+#  - cd ..
 stages:
   - build
   - test
