--- a/android/script/module_builder.gradle
+++ b/android/script/module_builder.gradle
@@ -1,3 +1,49 @@
+ext {
+    findProject = { moduleName ->
+        if (gradle.ext.binaryModuleMap.containsKey(moduleName)) {
+            def module = gradle.ext.binaryModuleMap[moduleName]
+            if (module.binary_artifact.isEmpty()) {
+                throw new IllegalArgumentException("binary module 的binary_artifact不能为空")
+            }
+            return module.binary_artifact
+        } else if (gradle.ext.sourceModuleMap.containsKey(moduleName)) {
+            return gradle.rootProject.findProject(moduleName)
+        }
+        //该模块为exclude，不会进行编译不需要依赖
+        return null
+    }
+    findDepProjects = { moduleName ->
+        def module = null
+        if (gradle.ext.sourceModuleMap.containsKey(moduleName)) {
+            module = gradle.ext.sourceModuleMap[moduleName]
+            if (module.deps == null) return []
+        } else if (gradle.ext.binaryModuleMap.containsKey(moduleName)) {
+            module = gradle.ext.binaryModuleMap[moduleName]
+            if (module.deps == null) return []
+        }
+        d = []
+        if (module != null) {
+            module.deps.each { dep ->
+                def m = findProject(dep)
+                if (m != null) {
+                    d.add(m)
+                }
+            }
+        }
+        return d
+
+    }
+    findModule = { moduleName ->
+        if (gradle.ext.binaryModuleMap.containsKey(moduleName)) {
+            return gradle.ext.binaryModuleMap[moduleName]
+        } else if (gradle.ext.sourceModuleMap.containsKey(moduleName)) {
+            return gradle.ext.sourceModuleMap[moduleName]
+        }
+        return null
+    }
+    modules = gradle.ext.sourceModuleMap.values() + gradle.ext.binaryModuleMap.values()
+}
+
 static void configModule(Project project, String moduleName, boolean includeModule, boolean isBinary = null) {
     def localProperties = new Properties()
     def localPropertiesFile = new File(project.rootDir, 'local.properties')
