--- a/gradle-plugin/bundle1/build.gradle
+++ b/gradle-plugin/bundle1/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     api 'androidx.core:core-ktx:1.5.0'
     api 'androidx.appcompat:appcompat:1.3.0'
     api 'com.google.android.material:material:1.3.0'
