--- a/gradle-plugin/groovy-gradle-plugin/counter-plugin/build.gradle
+++ b/gradle-plugin/groovy-gradle-plugin/counter-plugin/build.gradle
@@ -1,4 +1,4 @@
 apply from: "${rootDir}/script/java_app.gradle"
 dependencies {
-    api project(':base-plugin')
+    implementation project(':base-plugin')
 }
