--- a/gradle-plugin/groovy-gradle-plugin/counter-plugin/build.gradle
+++ b/gradle-plugin/groovy-gradle-plugin/counter-plugin/build.gradle
@@ -1,4 +1,14 @@
-apply from: "${rootDir}/script/java_app.gradle"
+apply plugin: 'java'
+apply plugin: 'groovy'
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+tasks.withType(GroovyCompile) {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
 dependencies {
     implementation project(':base-plugin')
 }
