--- a/gradle-plugin/groovy-gradle-plugin/perf/perf-api/build.gradle
+++ b/gradle-plugin/groovy-gradle-plugin/perf/perf-api/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
 }
-apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "30.0.2"
+    compileSdk 31
+
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 29
+        minSdk 24
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -33,14 +33,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    api project(':ibc:annotations')
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    api project(':perf:annotations')
 }
+
 apply from: "${rootDir}/script/publisher.gradle"
 publish {
     name = "ibc-api"
