--- a/gradle-plugin/groovy-gradle-plugin/perf/perf-plugin/build.gradle
+++ b/gradle-plugin/groovy-gradle-plugin/perf/perf-plugin/build.gradle
@@ -7,9 +7,19 @@ pluginBundle {
     tags = ['app performance']
     version = '1.0.0'
 }
-apply from: "${rootDir}/script/java_app.gradle"
-apply plugin: "java-gradle-plugin"
+apply plugin: 'java'
+apply plugin: 'groovy'
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
+tasks.withType(GroovyCompile) {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
+
+apply plugin: "java-gradle-plugin"
 gradlePlugin {
     plugins {
         perfplugin {
