--- a/gradle-plugin/groovy-gradle-plugin/proguard-plugin/build.gradle
+++ b/gradle-plugin/groovy-gradle-plugin/proguard-plugin/build.gradle
@@ -1,5 +1,7 @@
-apply from: "${rootDir}/script/java_app.gradle"
-
+apply plugin: 'kotlin'
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
 apply plugin: "java-gradle-plugin"
 gradlePlugin {
     plugins {
