--- a/gradle-plugin/app/build.gradle
+++ b/gradle-plugin/app/build.gradle
@@ -41,6 +41,9 @@ android {
 //        variant.registerJavaGeneratingTask()
 //
 //    }
+    lintOptions {
+        abortOnError false
+    }
 }
 //configurations {
 //    // A configuration meant for consumers that need the API of this component
