--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -9,7 +9,7 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 #Sat Mar 28 19:26:17 CST 2020
 android.enableJetifier=true
 android.useAndroidX=true
